# digital-systems-project-

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
configs/: base.yaml  baselines.yaml  dqn.yaml  ppo.yaml  qlearning.yaml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  LITERATURE.md  RISK_MANAGEMENT.md
src/: __init__.py
src/agents/: dqn.py  ppo.py  qlearning.py
src/baselines/: buy_hold.py  ma_crossover.py
src/cli/: baselines.py  download_data.py  evaluate.py  pipeline.py  preprocess.py  train.py
src/dashboard/: app.py  auth.py  trader.py
src/data/: features.py  fetch_yfinance.py  preprocess.py  schema.py
src/eval/: backtester.py  metrics.py  plots.py
src/live/: exchange_ws.py  price_cache.py  server.py  strategy_runner.py
src/risk/: risk_manager.py
src/utils/: config.py  logging.py  paths.py  seeds.py
tests/: conftest.py  test_determinism.py  test_env.py  test_preprocess.py
